# JanSevak

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  PRODUCT.md  README.md  alembic.ini  api_response.json  docker-compose.standalone.yml  docker-compose.yml  fix_templates.py  main.py  pyproject.toml  seed_yaml.py
.chromadb/: chroma.sqlite3
docs/: KNOWLEDGE_BASE_GENERATION_GUIDE.md  deployment.md
docs/ai/: 00-project-brief.md  01-architecture.md  02-active-context.md  03-implementation-master.md  04-final-review.md
docs/ai/guides/: 01-project-setup.md  02-telegram-bot.md  03-ai-agent-core.md  04-knowledge-base-rag.md  05-anonymous-reporting.md  06-query-escalation.md  07-admin-dashboard.md  08-voice-processing.md  09-healthcare-agent.md  10-farmer-services.md  11-notifications-profiling.md  12-whatsapp-integration.md  13-scaling-performance.md
migrations/: env.py
migrations/versions/: 07d7ff2ac3cf_add_performance_indexes.py  1077519468df_add_phone_number_and_auth_provider.py  1080ccb9f184_add_healthcare_facilities.py  27c672b01319_add_notifications_and_onboarding_to_.py  2e8c04a22f68_add_organization_and_adminuser_models.py  3fa1e3112e01_add_datasynclog_and_sync_fields.py  61bf3899b851_add_block_and_pin_code_to_users.py  7977b9a8701c_add_variety_and_grade_to_mandi_prices.py  7b30d848d3e3_add_mandi_prices.py  7fe5b7385227_add_onboarding_complete_to_user.py  87deb437b00b_add_organization_id_to_anonymousreport.py  93896ec8a2d6_initial_schema_users_conversations_.py  9e95541c5d42_add_authorities_and_anonymous_reports_.py  e3198948670c_add_notifications_enabled_to_users.py
scripts/: seed_authorities.py  seed_healthcare.py  seed_knowledge_base.py  seed_mandi.py  setup_assets.py  start.sh  test_scenarios.py
src/janseva/: config.py
src/janseva/admin/: app.py  auth.py  oauth.py
src/janseva/agents/: __init__.py  llm.py  orchestrator.py  service.py  state.py
src/janseva/api/: auth.py  chat.py  complaints.py  departments.py  diagnostics.py  reports.py  uploads.py  (+2 more)
tests/load/: locustfile.py
tests/test_agents/: test_agent_orchestrator.py
tests/test_bot/: test_bot_routing.py
web/: Dockerfile  package-lock.json  package.json  remove_bg.py
(+159 files in other folders)
