[project]
name = "janseva"
version = "0.1.0"
description = "AI-powered government services platform for Indian citizens"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- Telegram Bot ---
    "aiogram>=3.15,<4",
    # --- Web Framework ---
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.12",
    # --- AI / LLM ---
    "langgraph>=0.2,<1",
    "langchain>=0.3,<1",
    "langchain-google-genai>=2,<3",       # Gemini API
    "langchain-community>=0.3,<1",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",                    # Async PostgreSQL driver
    "alembic>=1.14,<2",
    "greenlet>=3.1,<4",                    # Required by SQLAlchemy async
    # --- Cache / Queue ---
    "redis[hiredis]>=5.2,<6",
    "arq>=0.26,<1",
    # --- Vector Store (RAG) ---
    "chromadb>=0.5,<1",
    # --- Voice Processing ---
    "faster-whisper>=1.0,<2",
    "pydub>=0.25,<1",
    # --- Security ---
    "cryptography>=43,<44",                # Report encryption
    "python-jose[cryptography]>=3.3,<4",   # JWT for admin auth
    "passlib[bcrypt]>=1.7,<2",             # Password hashing
    # --- Utilities ---
    "pydantic[email]>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24,<26",
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
    "langdetect>=1.0,<2",
    "psycopg2-binary>=2.9.12",
    "langchain-openai>=0.3.35",
    "pyyaml>=6.0.3",
    "authlib>=1.6.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4,<5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
